Small css fix to keep prev/next button in the view even if the content bleeds, fixes tooltip for screenreader nex/prev buttons

--- a/src/index.css
+++ b/src/index.css
@@ -327,3 +327,7 @@ td {
     opacity: 1;
   }
 }
+
+.CommonCartridge--content {
+  overflow: auto;
+}
